tests/ui/delegation/glob-non-impl.stderr
error: delegation is not supported in `extern` blocks
  --> $DIR/glob-non-impl.rs:14:5
   |
LL |     reuse Trait::*;
   |     ^^^^^^^^^^^^^^^

error: glob delegation is only supported in impls
  --> $DIR/glob-non-impl.rs:7:1
   |
LL | reuse Trait::*;
   | ^^^^^^^^^^^^^^^

error: glob delegation is only supported in impls
  --> $DIR/glob-non-impl.rs:10:5
   |
LL |     reuse Trait::*;
   |     ^^^^^^^^^^^^^^^

error: glob delegation is only supported in impls
  --> $DIR/glob-non-impl.rs:18:5
   |
LL |     reuse Trait::*;
   |     ^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

